MVP of feature service
